--- a/DataStore_Characters/Changelog.txt
+++ b/DataStore_Characters/Changelog.txt
@@ -2,6 +2,14 @@ DataStore Changelog (dates in dd/mm/yyyy)
 ===================
 
 
+Version 2024.01.26 (26/01/2024)
+
+- Stopped using Ace libraries
+- Using locals for all global functions
+- Using new tables in the SV file. 
+- Each 'domain' is now in its own file, under the API folder.
+- Only the relevant API's are loaded by the .toc files
+
 Version 2023.12.17 (17/12/2023)
 
 - Fixed the check for rested XP in WotLK.
