--- a/DataStore_Characters/Changelog.txt
+++ b/DataStore_Characters/Changelog.txt
@@ -2,6 +2,10 @@ DataStore Changelog (dates in dd/mm/yyyy)
 ===================
 
 
+Version 2024.06.27 (27/05/2024)
+
+- Changed the way to store XP, Max XP and Rest XP, since the values related to high level characters in Cataclysm are too high for packed storage.
+
 Version 2024.06.23 (23/06/2024)
 
 - ToC Update for Cataclysm Release 4.4.001
