--- a/DataStore_Characters/Changelog.txt
+++ b/DataStore_Characters/Changelog.txt
@@ -2,7 +2,11 @@ DataStore Changelog (dates in dd/mm/yyyy)
 ===================
 
 
-Version 2024.06.27 (27/05/2024)
+Version 2024.07.28 (28/07/2024)
+
+- ToC Update.
+
+Version 2024.06.27 (27/06/2024)
 
 - Changed the way to store XP, Max XP and Rest XP, since the values related to high level characters in Cataclysm are too high for packed storage.
 
