--- a/DataStore_Characters/Changelog.txt
+++ b/DataStore_Characters/Changelog.txt
@@ -2,6 +2,11 @@ DataStore Changelog (dates in dd/mm/yyyy)
 ===================
 
 
+Version 2024.11.11 (11/11/2024)
+
+- Added IsCharacterClass()
+- ToC Update.
+
 Version 2024.09.15 (15/09/2024)
 
 - ToC Update.
